# machine-learning-zoomcamp-homework

01-intro/: homework.ipynb
02-regression/: 02-price-prediction-live.ipynb  homework.ipynb
03-classification/: 03-churn-live.ipynb  homework.ipynb
04-evaluation/: 04-evaluation.ipynb  homework.ipynb
05-deployment/: 05-deployment.ipynb
05-deployment/homework-05/: Dockerfile  predict.py  pyproject.toml  test-predict.ipynb
06-trees/: 06-trees.ipynb  homework.ipynb
08-deep-learning/: homework.ipynb  notebook.ipynb
09-serverless/: Dockerfile  homework.ipynb  lambda_function.py  pyproject.toml
10-kubernetes/: gateway.py  homework.ipynb  notebook.ipynb  proto.py  pyproject.toml
